--- a/core-bundles/language/pom.xml
+++ b/core-bundles/language/pom.xml
@@ -21,6 +21,16 @@
 	<module>org.eclipse.vorto.editor.infomodel</module>
 	<module>org.eclipse.vorto.editor.mapping</module>
 	<module>org.eclipse.vorto.editor</module>
+	<!-- 
+	<module>org.eclipse.vorto.editor.datatype.ide</module>
+	<module>org.eclipse.vorto.editor.datatype.ui</module>
+	<module>org.eclipse.vorto.editor.functionblock.ide</module>
+	<module>org.eclipse.vorto.editor.functionblock.ui</module>
+	<module>org.eclipse.vorto.editor.infomodel.ide</module>
+	<module>org.eclipse.vorto.editor.infomodel.ui</module>
+	<module>org.eclipse.vorto.editor.mapping.ide</module>
+	<module>org.eclipse.vorto.editor.mapping.ui</module>
+	 -->
 	</modules>
 
 </project>
